Proyecto sin profile.js

--- a/pages/characters.html
+++ b/pages/characters.html
@@ -30,6 +30,7 @@
   </header>
 
   <main>
+    <div class="loader-background"></div>
     <div class="loader" id="loader"></div>
 
     <div class="character-list">
