--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header>
-    <h1>Personajes</h1>
+    <h1>Favoritos</h1>
     <nav>
       <a href="characters.html">Personajes</a>
       <a href="profile.html">Perfil</a>
@@ -30,21 +30,12 @@
   </header>
 
   <main>
+    <div class="loader-background"></div>
     <div class="loader" id="loader"></div>
 
     <div class="character-list">
     </div>
 
-    <div class="pages-buttons">
-      <div class="previous-page-buttons">
-        <button id="first-page-button"><i class="fa-solid fa-backward-step"></i></button>
-        <button id="previous-page-button"><i class="fa-solid fa-backward"></i></button>
-      </div>
-      <div class="next-page-buttons">
-        <button id="next-page-button"><i class="fa-solid fa-forward"></i></button>
-        <button id="last-page-button"><i class="fa-solid fa-forward-step"></i></button>
-      </div>
-    </div>
   </main>
 
   <script src="../js/favorites.js"></script>
