--- a/pages/favorites.html
+++ b/pages/favorites.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personajes - Rick and Morty</title>
   <link rel="stylesheet" href="../css/characters.css">
+  <link rel="stylesheet" href="../css/favorites.css">
   <link rel="stylesheet" href="../css/styles.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/siimple-icons/siimple-icons.css" />
   <script src="https://kit.fontawesome.com/a665e85003.js" crossorigin="anonymous"></script>
@@ -32,6 +33,8 @@
   <main>
     <div class="loader-background"></div>
     <div class="loader" id="loader"></div>
+
+    <div class="no-favorites">Aún no tienes ningún personaje favorito!</div>
 
     <div class="character-list">
     </div>
