--- a/pages/profile.html
+++ b/pages/profile.html
@@ -4,23 +4,26 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Perfil de Usuario</title>
-  <link rel="stylesheet" href="../css/styles.css" >
+  <link rel="stylesheet" href="../css/styles.css"/>
   <link rel="stylesheet" href="../css/profile.css"/>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/siimple-icons/siimple-icons.css" />
+  <script src="https://kit.fontawesome.com/a665e85003.js" crossorigin="anonymous"></script>
+  <link rel="shortcut icon" href="../img/ICO_PAGE.png" type="image/x-icon">
 </head>
 <body>
   <header>
-    <h1>Favoritos</h1>
+    <h1>Perfil</h1>
     <nav>
       <a href="characters.html">Personajes</a>
-      <a href="profile.html">Perfil</a>
+      <a href="favorites.html">Favoritos</a>
 
       <div class="profile-picture-ctn">
         <img src="../img/BLANK_PROFILE_PICTURE.png" alt="">
       </div>
 
       <div class="user-options">
-        <a href="profile.html">Perfil</a>
         <a href="characters.html">Personajes</a>
+        <a href="favorites.html">Favoritos</a>
         <button id="logoutBtn"><i class="si-login"></i>Cerrar sesión</button>
       </div>
     </nav>
@@ -33,14 +36,14 @@
         <!-- Usuario -->
         <div class="form-group">
           <label for="username">Usuario</label>
-          <input type="text" id="username" name="username" required />
+          <input type="text" id="username" name="username"/>
           <small class="error" id="username-error"></small>
         </div>
 
         <!-- Email -->
         <div class="form-group">
           <label for="email">Correo electrónico</label>
-          <input type="email" id="email" name="email" required />
+          <input type="email" id="email" name="email"/>
           <small class="error" id="email-error"></small>
         </div>
 
@@ -62,5 +65,6 @@
   </main>
 
   <script src="../js/profile.js"></script>
+  <script src="../js/header.js"></script>
 </body>
 </html>
